--- a/src/components/FinishGame/FinishGame.css
+++ b/src/components/FinishGame/FinishGame.css
@@ -1,20 +1,24 @@
 .FinishGame {
     margin: auto;
+   
     padding: 30px 40px;
-    margin-top: 120px;
-    width: 700px;
+    width: 500px;
     min-height: 500px;
     display: flex;
     flex-direction: column;
  
-    border: 1px solid #fff;
+    border: 2px solid #fff;
 }
 
-.FinishGame p {
+.FinishGame > p,b {
     margin: 5px;
+    
     text-align: center;
     font-size: 32pt;
     font-weight: bold;
+}
+.FinishGame >b {
+    margin-bottom: 60px;
 }
 
 .FinishGame Button {
@@ -22,3 +26,14 @@
     height: 30px;
     font-size: 20px;
 }
+
+.FinishGame p strong{
+    font-family: digital-clock-font;
+}
+
+@font-face{
+    font-family:'digital-clock-font';
+    src: url('../../fonts/digital-7.ttf');
+   };
+
+  
