--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -26,3 +26,9 @@
    .Button:active {
     box-shadow: 1px 1px 1px rgba(0, 0, 0, .7);
    }
+
+   .Button:disabled {
+      color: darkgray;
+      background: grey;
+      cursor: not-allowed;
+     }
