--- a/src/containers/Games/Snake/SnakeDot.css
+++ b/src/containers/Games/Snake/SnakeDot.css
@@ -2,6 +2,6 @@
     position: absolute;
     width: 2%;
     height: 2%;
-    background-color: black;
-    border: 1px solid  rgba(69, 82, 81, 0.76);
+    background-color: #000;
+    border: 1px solid rgba(69, 82, 81, 0.76)
 }
