Fun_game03(Added API Service)

--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,5 +1,5 @@
    .Button {
-      padding: 2px 5px;
+      padding: 2px;
       width: fit-content;
       font-size: 35px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
