--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -4,10 +4,17 @@
     font-size: 40px;
     font-family: digital-clock-font;
     font-weight: bold;
-   
     color: #FFFFF0;
 }
+
+@media (max-width: 640px) {
+    .Timer{
+        font-size: 30px;
+    }
+}
+
 @font-face{
     font-family:'digital-clock-font';
     src: url('../../fonts/digital-7.ttf');
    };
+
