--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,8 +1,7 @@
 .Menu {
     display: block;
-   
     width: 100%;
-    background-color: #36362e;
+    background-color: #041c2c;
     font-weight: 600;
 }
 
@@ -15,7 +14,7 @@
 .Menu ul a {
     text-decoration: none;
     padding: 10px 0;
-    color: #FFFFF0;
+    color: #fff;
     border-right: 1px solid #FFFFF0;  
     float: left;
 }
@@ -27,7 +26,7 @@
 
 .Menu ul a:hover {
     background-color: #FFFFF0;
-    color: #36362e;
+    color: #041c2c;
 }
 
 .Menu ul li{
