--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -17,7 +17,7 @@
 
 .Navigation  li a {
     font-weight: 500;
-    color: #36362e;
+    color: #041c2c;
     display: flex;
     list-style-type: none;
     padding: 1vmax;
