--- a/src/components/Stats/ListItem/ListItem.css
+++ b/src/components/Stats/ListItem/ListItem.css
@@ -6,7 +6,7 @@
     float: right;
     font-family: digital-clock-font; 
     font-size: 24px;
-    font-weight: bold;
+    /* font-weight: bold; */
  }
 
  @font-face{
