--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -4,7 +4,7 @@
     font-size: 40px;
     font-family: digital-clock-font;
     font-weight: bold;
-    color: #FFFFF0;
+    color: #041c2c;
 }
 
 @media (max-width: 640px) {
