--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,29 +1,32 @@
    .Button {
-      padding: 2px;
-      width: fit-content;
-      font-size: 35px;
+      width: 110px;
+      height: 45px;
+      font-size: 30px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
-      font-weight: 500;
-      color: #36362e;
-      text-shadow: 1px 1px 2px #000000;
+      font-weight: 600;
+      color: #fff;
       text-align: center;
-      border-radius: 5px;
-      background: #EEEEE0;
+      user-select: none;
+      border: 2px solid black;
+      border-top-color: #fff;
+	   border-left-color: #fff;
+	   border-right-color: #808080;
+      border-bottom-color: #808080;
+      background: #041c2c;
       text-decoration: none;
       cursor: pointer;
-     
-      box-shadow: 2px 2px 2px rgba(0, 0, 0, .7);
-      border: none;
       outline: none;
    }
 
-   .Button:hover {
-    background: #CDCDC1;
-    color: #fff;
-   }
-
    .Button:active {
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, .7);
+      font-size: 28px;
+      padding-top: 2px;
+      padding-left: 4px;
+      background: #113349;
+      border-top-color: #808080;
+      border-left-color: #808080;
+      border-right-color: #fff;
+      border-bottom-color: #fff;
    }
 
    .Button:disabled {
