--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -3,7 +3,7 @@
     padding: 5px;
     width: 96%;
     margin: 5px 0 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #041c2c;
     border-radius: 5px;
     font-size: 15px;
     font-weight: bold;
@@ -12,5 +12,4 @@
 
 label {
     font-size: 20px;
-    color: #36362e;
 }
