--- a/src/components/UI/Loader/Loader.css
+++ b/src/components/UI/Loader/Loader.css
@@ -1,9 +1,9 @@
 .loader {
     display: block;
     margin: auto;
-    padding: 20px 0 20px 0;  
-    background-color: #CDCDC1;
-    border: 1px solid #36362e;
+    padding: 50px 0 50px 0;  
+    background-color: #BEBEBE;
+    border: 1px solid #041c2c;
     border-top: none;
 }
    
@@ -23,10 +23,10 @@
     width: 64px;
     height: 64px;
     margin: 8px;
-    border: 8px solid #36362e;
+    border: 8px solid #041c2c;
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #36362e transparent transparent transparent;
+    border-color: #041c2c transparent transparent transparent;
   }
 
 .ldsring div:nth-child(1) {
