--- a/src/containers/Games/Minesweeper/Cell/Cell.css
+++ b/src/containers/Games/Minesweeper/Cell/Cell.css
@@ -1,12 +1,15 @@
 .Cell {
     background: #9c9b9a;
-    padding-top: 1px;
-    width: 23px;
-    height: 22px;
+    width: 21px;
+    height: 21px;
     font-weight: 600;
     text-align: center;
     user-select: none;
-    border: 1px solid black;
+    border: 2px solid black;
+    border-top-color: #fff;
+	border-left-color: #fff;
+	border-right-color: #808080;
+	border-bottom-color: #808080;
 }
 
 .Cell>i {
@@ -15,3 +18,5 @@
     justify-content: center;
     font-size: 16px;
 }
+	
+	
