--- a/src/containers/Games/Snake/GameArea/GameArea.css
+++ b/src/containers/Games/Snake/GameArea/GameArea.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     margin: auto;
     margin-top: 100px;
-    width: 504px;
-    height: 540px;
+    width: 520px;
+    height: 560px;
     /* border: 2px solid #36362e; */
-    background-color: #8B8B83;
+   
 }
 
 .GameArea>button {
@@ -14,21 +14,12 @@
 }
 
 .Content {
+  background-color: #D3D3D3;
   display: flex;
   position: relative; 
   width: 500px;
   height: 500px;
-  border: 2px solid #36362e;
-}
-
-.Score {
-  padding-left: 10px;
-  height: 40px;
-  border-bottom: none;
-  font-size: 40px;
-  font-family: digital-clock-font;
-  font-weight: bold;
-  color: #FFFFF0;
+  border: 10px solid #BEBEBE;
 }
 
 @font-face {
@@ -43,8 +34,8 @@
   }
 
   .GameArea{
-    width: 484px;
-    height: 524px;
+    width: 500px;
+    height: 540px;
   }
 }
 
@@ -55,11 +46,8 @@
   }
 
   .GameArea{
-    width: 344px;
-    height: 374px;
-  }
-
-  .Score{
+    width: 360px;
+    height: 380px;
     font-size: 30px;
   }
 }
